# QT-Line-Widgets

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  xmake.lua
examples/: CMakeLists.txt  test.cc  xmake.lua
widgets/: CMakeLists.txt  xmake.lua
widgets/common/: config.cc  config.h  font.h  icon.cc  icon.h  logger.h  style_sheet.cc  style_sheet.h  style_sheet_p.h  utils.cc  utils.h
widgets/components/: alert.cc  alert.h  alert_p.h
widgets/res/: resource.qrc
widgets/res/qss/dark/: alert.qss
widgets/res/qss/light/: alert.qss
